--- a/articulo-api/articulo-api/src/main/resources/application.properties
+++ b/articulo-api/articulo-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración de PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/articulos_db
 spring.datasource.username=postgres
-spring.datasource.password=N1C0L45M0N74N4R1i$
+spring.datasource.password=CLAVE_DEL_PROYECTO
 
 # Configuración de JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
